--- a/.gitignore
+++ b/.gitignore
@@ -256,3 +256,27 @@ GeneratedArtifacts/
 _Pvt_Extensions/
 ModelManifest.xml
 
+# MPLAB X IDE
+*.d
+*.pre
+*.p1
+*.lst
+*.sym
+*.obj
+*.o
+*.sdb
+*.obj.dmp
+html/
+nbproject/private/
+nbproject/Package-*.bash
+build/
+nbbuild/
+dist/
+nbdist/
+nbactions.xml
+nb-configuration.xml
+funclist
+nbproject/Makefile-*
+disassembly/
+*.map
+
